# rust-auth

./: .env  Cargo.toml
migrations/: 20250113092121_create_users_table.down.sql
src/: handler-import-only.rs  handler-note-list.rs  handler.rs  handler_get_user.rs  main.rs  model.rs  routes.rs  schema.rs
